--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preload" href="/images/main_palisade1.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oh My Car Set!</title>
+    <title>Oh My Car Set! | 현대자동차 - 내 차 만들기</title>
+    <meta
+      name="description"
+      content="원하시는 차량의 견적을 편리하게 조회해 보세요! 가이드 모드를 통해 사용자 맞춤 견적을 받아보실 수 있습니다."
+    />
     <style>
       @font-face {
         font-family: 'Hyundai Sans Head Medium';
