--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/OhMyCarSet.svg" />
     <link rel="preload" href="/images/main_palisade1.png" as="image" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh My Car Set! | 현대자동차 - 내 차 만들기</title>
